--- a/questionnaire/index.html
+++ b/questionnaire/index.html
@@ -83,7 +83,7 @@
 					<button id="submit" type="submit">
 						<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-fais-entendre-ma-voix.png" alt="Je fais entendre ma voix">
 					</button>
-						<p class="juridique">Vous êtes informés que vous bénéficiez d’un droit d’accès, de rectification, d’effacement et<br />de portabilité de vos données, ainsi que du droit d’obtenir la limitation de leur traitement<br />et d’un droit d’opposition. </p>
+						<p class="juridique">Vous êtes informés que vous bénéficiez d’un droit d’accès, de rectification, d’effacement et de portabilité de vos données, ainsi que du droit d’obtenir la limitation de leur traitement<br />et d’un droit d’opposition. </p>
 						<div class="optin round">
 							<input name="optin" type="checkbox" id="f_optin" required/>
 							<label class="box"  for="f_optin"></label>
@@ -171,7 +171,9 @@
 						<p>Je finance l’impression et la diffusion de documents destinés à sensibiliser le grand public au bien-être animal</p>
 						<p class="deduction">soit <span>24.40<span class="small">€</span></span><br />après déduction fiscale</p>
 					</div>
-					<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-donne-orange.png" alt="Je donne">
+					<a href="https://donner.welfarm.fr/b?cid=32&amount=6000" target="_blank">
+						<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-donne-orange.png" alt="Je donne">
+					</a>
 				</div>
 				<div class="container-don">
 					<div class="number">
@@ -182,7 +184,9 @@
 						<p>J’offre un mois de nourriture et de soin à un animal de la Hardonnerie</p>
 						<p class="deduction margin-38">soit <span>34<span class="small">€</span></span><br />après déduction fiscale</p>
 					</div>
-					<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-donne-orange.png" alt="Je donne">
+					<a href="https://donner.welfarm.fr/b?cid=32&amount=10000" target="_blank">
+						<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-donne-orange.png" alt="Je donne">
+					</a>
 				</div>
 				<div class="container-don">
 					<div class="number">
@@ -193,7 +197,9 @@
 						<p>Je participe a une campagne d’affichage dans le métro</p>
 						<p class="deduction margin-60">soit <span>51<span class="small">€</span></span><br />après déduction fiscale</p>
 					</div>
-					<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-donne-orange.png" alt="Je donne">
+					<a href="https://donner.welfarm.fr/b?cid=32&amount=15000" target="_blank">
+						<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-donne-orange.png" alt="Je donne">
+					</a>
 				</div>
 
 			</div>
@@ -229,6 +235,18 @@
 <script src="https://code.jquery.com/jquery.min.js" type="text/javascript"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.3/foundation.min.js" type="text/javascript"></script>
 
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-5ZGHT4Q');</script>
+<!-- End Google Tag Manager -->
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5ZGHT4Q"
+				  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
 <script src="assets/js/app.js" type="text/javascript"></script>
 <script src="assets/js/remodal.js" type="text/javascript"></script>
