Updated 'fermesasang/index.html' via CloudCannon

--- a/fermesasang/index.html
+++ b/fermesasang/index.html
@@ -194,7 +194,7 @@
 						<p class="euro">€</p>
 					</div>
 					<div class="other margin">
-						<p>Je participe a une campagne d’affichage dans le métro</p>
+						<p>Je participe à une campagne d’affichage dans le métro</p>
 						<p class="deduction">soit <span>51<span class="euro">€</span></span><br />après déduction fiscale</p>
 					</div>
 
