Updated 'fermesasang/index.html' via CloudCannon

--- a/fermesasang/index.html
+++ b/fermesasang/index.html
@@ -182,7 +182,7 @@
 						<p class="euro">€</p>
 					</div>
 					<div class="other margin">
-						<p>J’offre un mois de nourriture et de soin à un animal de la Hardonnerie</p>
+						<p>J’offre un mois de nourriture et de soin à un animal de la Hardonnerie (refuge éducatif qui recueille des animaux au passé difficile)</p>
 						<p class="deduction">soit <span>34<span class="euro">€</span></span><br />après déduction fiscale</p>
 					</div>
 
