--- a/fermesasang/index.html
+++ b/fermesasang/index.html
@@ -276,7 +276,7 @@
 					Le laboratoire MSD a déjà renoncé à se fournir dans ces fermes.<br /><br />
 					C’est pourquoi je joins aujourd’hui ma voix à celle de WELFARM pour vous demander de prendre un engagement : celui de ne pas acheter d’eCG auprès des fermes à sang d’Argentine et d’Uruguay.<br /><br />
 					<br /><br />
-					<a href="mailto:cyrille.faucher@hipra.com;marc.prikazsky@ceva.com"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/j-envoie-un-mail-a-HIPRA-et-CEVA.png" alt="J’envoie un mail à HIPRA et CEVA"></a>
+					<a href="mailto:contact@ceva.com"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/j-envoie-un-mail-a-HIPRA-et-CEVA.png" alt="J’envoie un mail à HIPRA et CEVA"></a>
 				</div>
 			</div>
 			<div class="small-12 large-6 columns">
