--- a/fermesasang/index.html
+++ b/fermesasang/index.html
@@ -270,27 +270,39 @@
 			<div class="small-12 large-6 columns">
 				<div class="laboratoire">
 					<h3 class="title"><span class="red">J'écris</span><br /> aux laboratoires</h3>
-					<p> J’ai appris avec effroi le traitement réservé aux juments au sein des fermes à sang d’Argentine et d’Uruguay.<br /><br />
-					Les juments y sont saignées, maltraitées, avortées, tout cela pour extraire de leur sang une hormone. Les avortements systématiques et les prélèvements de sang massifs et répétés sont contraires à l’éthique.<br /><br />
-						De telles pratiques ne seraient pas tolérées en France. Il est donc inadmissible que des laboratoires puissent commercialiser, sur notre territoire, des médicaments produits dans ces conditions.<br /><br />
-					Le laboratoire MSD a déjà renoncé à se fournir dans ces fermes.<br /><br />
-					C’est pourquoi je joins aujourd’hui ma voix à celle de WELFARM pour vous demander de prendre un engagement : celui de ne pas acheter d’eCG auprès des fermes à sang d’Argentine et d’Uruguay.<br /><br />
-					<br /><br />
-					<a href="mailto:contact@ceva.com"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/j-envoie-un-mail-a-HIPRA-et-CEVA.png" alt="J’envoie un mail à HIPRA et CEVA"></a>
+					<p> À l’attention des laboratoires CEVA et HIPRA.<br />
+						J’ai appris avec effroi le traitement réservé aux juments au sein des fermes à sang d’Argentine et d’Uruguay.<br /><br />
+
+						Les juments y sont saignées, maltraitées, avortées, tout cela pour extraire de leur sang une hormone, l’eCG, qui permet de faire ovuler sur commande, les brebis, chèvres et truies des élevages français...
+						Les associations vous alertent sur le sujet depuis 2015. Hélas, les images diffusées aujourd’hui par WELFARM montrent que la situation ne s’est pas améliorée.<br /><br />
+
+						En Argentine et en Uruguay, les lois de protection animale sont quasi-inexistantes. Les fermes peuvent donc y produire de l’eCG à bas coût, sans se soucier des juments.   Les avortements systématiques dans un but purement économique sont contraires à l’éthique. Les prélèvements de sang massifs et répétés mettent à mal la santé des juments.<br /><br />
+
+						De telles pratiques ne seraient pas tolérées en France. Il est donc inadmissible que des laboratoires puissent commercialiser, sur notre territoire, des médicaments produits dans ces conditions.
+						Les laboratoires MSD ont déjà renoncé à se fournir auprès de ces fermes.<br /><br />
+
+						C’est pourquoi je joins aujourd’hui ma voix à celle de WELFARM pour vous demander de prendre un engagement : celui de ne pas acheter d’eCG auprès des fermes à sang d’Argentine et d’Uruguay.
+						Avec WELFARM, je dis non aux fermes à sang !						<br /><br /><br />
+
+						<a href="mailto:contact@ceva.com"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/j-envoie-un-mail-a-HIPRA-et-CEVA.png" alt="J’envoie un mail à HIPRA et CEVA"></a>
 				</div>
 			</div>
 			<div class="small-12 large-6 columns">
 				<div class="row ceva">
-					<a href="https://www.facebook.com/pg/CevaSanteAnimaleGlobal/reviews/" target="_blank"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-laisse-un-avis-CEVA.png" alt="Je laisse un AVIS sur la page de ceva">
-					<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/laisser-un-avis.png" alt="Laisser un avis"></a>
+					<a href="https://www.facebook.com/pg/CevaSanteAnimaleGlobal/reviews/" target="_blank"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-laisse-un-avis-negatif.png" alt="Je laisse un message négatif sur la page de CEVA">
+					<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/laisser-un-message.png" alt="Laisser un message"></a>
 				</div>
 				<div class="row share">
 					<div class="row ">
-						<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-partage-l%E2%80%99enquete-sur-mon-compte-personnel.png" alt="Je partage l'enquête sur mon compte personnel">
+						<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-publie-un-message.png" alt="Je publie un message sur mon compte">
 					</div>
 					<div class="row compte">
-						<a href="https://www.facebook.com/share.php?u=https://action.welfarm.fr/fermesasang/" target="_blank"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/fb-big.png" alt="Je partage sur Facebook"></a>
-						<a href="https://twitter.com/home?status=Je%20viens%20de%20visionner%20la%20vid%C3%A9o%20d%E2%80%99enqu%C3%AAte%20publi%C3%A9e%20par%20%40WelfarmFR%20et%20demande%20%C3%A0%20%40Ceva_France%20d%E2%80%99arr%C3%AAter%20ses%20cruelles%20importations%20depuis%20les%20%23FermesASang%20de%20juments%20sud-am%C3%A9ricaines%20https%3A%2F%2Fbit.ly%2F2LkVmfM" target="_blank"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/tw-big.png" alt="Je partage sur Twitter"></a>
+						<div class="row text-center">
+							<a href="https://www.facebook.com/share.php?u=https://action.welfarm.fr/fermesasang/" target="_blank"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/partage-avec-fb.png" alt="Je partage sur Facebook"></a>
+						</div>
+						<div class="row text-center">
+							<a href="https://twitter.com/home?status=Je%20viens%20de%20visionner%20la%20vid%C3%A9o%20d%E2%80%99enqu%C3%AAte%20publi%C3%A9e%20par%20%40WelfarmFR%20et%20demande%20%C3%A0%20%40Ceva_France%20d%E2%80%99arr%C3%AAter%20ses%20cruelles%20importations%20depuis%20les%20%23FermesASang%20de%20juments%20sud-am%C3%A9ricaines%20https%3A%2F%2Fbit.ly%2F2LkVmfM" target="_blank"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/partage-avec-tw.png" alt="Je partage sur Twitter"></a>
+						</div>
 					</div>
 				</div>
 			</div>
