--- a/inscription/index.html
+++ b/inscription/index.html
@@ -9,6 +9,13 @@
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,500,600,700' rel='stylesheet' type='text/css' />
 	<link rel='stylesheet' href='assets/css/intlTelInput.css' type='text/css'/>
 	<link rel='stylesheet' href='assets/css/app.css' type='text/css'/>
+	<!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-5ZGHT4Q');</script>
+    <!-- End Google Tag Manager -->
 </head>
 <body>
 	<div class="row expanded notification">
