Updated 'inscription/index.html' via CloudCannon

--- a/inscription/index.html
+++ b/inscription/index.html
@@ -52,7 +52,7 @@
 					<div class="feedback g_error">
 						Les champs marqués en rouge sont obligatoires
 					</div>
-					<p>En vous inscrivant, vous acceptez de recevoir des informations de la part de Welfarm.</p>
+					<p>En remplissant ce formulaire, vous acceptez de recevoir les informations de Welfarm. Si à un moment ou à un autre, et pour n’importe quelle raison, vous ne souhaitez plus recevoir nos emails, vous pourrez vous désinscrire à n’importe quel moment, en un seul clic. Conformément à la loi " informatique et libertés " du 6 janvier 1978, vous bénéficiez d'un droit d'accès, de rectification, d'opposition et de suppression des données qui vous concernent. Pour l'exercer, adressez-vous à : WELFARM - 176 avenue André Malraux - BP 80242 - 57006 METZ Cedex 1</p>
 					<!--<input class="g-recaptcha" data-sitekey="6Le4myIUAAAAAAIXsKiZPNe1G6r0J9clsFwer0oK" type="button" id="f_summit" onclick="validateForm()" value="Je m’inscris" name="soumettre" disabled>-->
 					<input type="button" id="f_summit" onclick="validateForm()" value="Je m’inscris" name="soumettre" disabled>
 				</form>
