Add derniere minute

--- a/fermesasang/index.html
+++ b/fermesasang/index.html
@@ -152,6 +152,11 @@
 
 					</form>
 				</div>
+				<div class="row container-agis text-center">
+					<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/derniere-minute.jpg" class="absolute">
+					<p>Le 3 août, le laboratoire CEVA annonçait qu’il cessait tout commerce avec les fermes à sang d’Amérique du Sud. WELFARM ne prend pas cet engagement pour acquis. Nous rencontrerons le laboratoire CEVA le 5 septembre prochain pour lui poser toutes les questions que soulève ce nouvel engagement. En attendant, vous pouvez continuez à vous mobiliser&nbsp;…</p>
+					<a id="agis"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/j-agis.png" alt="J'agis" class="action"></a>
+				</div>
 			</div>
 		</div>
 		<div class="row max-width second-screen">
@@ -281,7 +286,7 @@
 						De telles pratiques ne seraient pas tolérées en France. Il est donc inadmissible que des laboratoires puissent commercialiser, sur notre territoire, des médicaments produits dans ces conditions.
 						Les laboratoires MSD ont déjà renoncé à se fournir auprès de ces fermes.<br /><br />
 
-						C’est pourquoi je joins aujourd’hui ma voix à celle de WELFARM pour vous demander de prendre un engagement : celui de ne pas acheter d’eCG auprès des fermes à sang d’Argentine et d’Uruguay.
+						C’est pourquoi je joins aujourd’hui ma voJe publie un message sur mon compteix à celle de WELFARM pour vous demander de prendre un engagement : celui de ne pas acheter d’eCG auprès des fermes à sang d’Argentine et d’Uruguay.
 						Avec WELFARM, je dis non aux fermes à sang !						<br /><br /><br />
 
 						<a href="mailto:cyrille.faucher@hipra.com,contact@ceva.com"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/j-envoie-un-mail-a-HIPRA-et-CEVA.png" alt="J’envoie un mail à HIPRA et CEVA"></a>
@@ -294,7 +299,7 @@
 				</div>
 				<div class="row share">
 					<div class="row ">
-						<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-publie-un-message.png" alt="Je publie un message sur mon compte">
+						<a href="mailto:benevoles@welfarm.fr"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/kit-benevole.png" alt="Je publie un message sur mon compte"></a>
 					</div>
 					<div class="row compte">
 						<div class="row text-center">
