Updated 'fermesasang/index.html' via CloudCannon

--- a/fermesasang/index.html
+++ b/fermesasang/index.html
@@ -154,7 +154,7 @@
 				</div>
 				<div class="row container-agis text-center">
 					<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/derniere-minute.jpg" class="absolute">
-					<p>Le 3 août, le laboratoire CEVA annonçait qu’il cessait tout commerce avec les fermes à sang d’Amérique du Sud. WELFARM ne prend pas cet engagement pour acquis. Nous rencontrerons le laboratoire CEVA le 5 septembre prochain pour lui poser toutes les questions que soulève ce nouvel engagement. En attendant, vous pouvez continuez à vous mobiliser&nbsp;…</p>
+					<p>Grâce à votre mobilisation, le laboratoire CEVA a renoncé, le 3 aout dernier, à acheter de l’eCG en Amérique du Sud. WELFARM a donc rencontré CEVA le 5 septembre dernier pour s’assurer de la solidité de cet engagement et rappeler que seul un arrêt total de la commercialisation de l’eCG serait acceptable. Nous les rencontrerons à nouveau dans quelques mois et vous tiendrons informés de l’avancement du dossier.&nbsp;…</p>
 					<a id="agis"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/j-agis.png" alt="J'agis" class="action"></a>
 				</div>
 			</div>
