--- a/fermesasang/index.html
+++ b/fermesasang/index.html
@@ -49,8 +49,7 @@
 
         Les laboratoires MSD ont déjà renoncé à se fournir auprès de ces fermes.<br/><br/>
 
-        C’est pourquoi je joins aujourd’hui ma voix à celle de WELFARM pour vous demander de <b>prendre un engagement : </br>celui de ne pas acheter
-            d’eCG auprès des fermes à sang d’Argentine et d’Uruguay.</b> <br/><br/>
+        C’est pourquoi je joins aujourd’hui ma voix à celle de WELFARM pour vous demander de de ne pas acheter d'eCG auprès des fermes d'Amérique du Sud.</b> <br/><br/>
 
         Avec Welfarm je dis STOP aux fermes à sang !<br/><br/></p>
 
@@ -173,7 +172,7 @@
                 </div>
                 <div class="row container-agis text-center">
                     <img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/une-premiere-victoire.png" class="absolute">
-                    <p>Grâce à votre mobilisation, le laboratoire CEVA a renoncé, le 3 aout dernier, à acheter de l’eCG en Amérique du Sud. WELFARM a
+                    <p>Grâce à votre mobilisation, le laboratoire CEVA a renoncé, le 3 août dernier, à acheter de l’eCG en Amérique du Sud. WELFARM a
                         donc rencontré CEVA le 5 septembre dernier pour s’assurer de la solidité de cet engagement et rappeler que seul un arrêt total
                         de la commercialisation de l’eCG serait acceptable. Nous les rencontrerons à nouveau dans quelques mois et vous tiendrons
                         informés de l’avancement du dossier.&nbsp;…</p>
@@ -307,7 +306,7 @@
         <div class="row">
             <div class="small-12 large-12">
                 <div class="hipraTitle">
-                    <h2>Sous la pression des associations, les laboratoires MSD, IDT-Biologika et CEVA ont renoncé à se fournir dans les fermes à sang d'amérique du sud.<br /><br />
+                    <h2>Sous la pression des associations, les laboratoires MSD, IDT-Biologika et CEVA ont renoncé à se fournir dans les fermes à sang d'Amérique du Sud.<br /><br />
                         <span class="red">Seul le laboratoire HIPRA reste sourd à nos appels !</span></h2>
                 </div>
             </div>
@@ -338,12 +337,9 @@
 
                         Face à ce scandale, les laboratoires MSD, IDT et CEVA ont renoncé à se fournir dans les fermes à sang d'Amerique du Sud.<span
                       style="font-weight: bold;"> Il est grand temps qu'HIPRA prenne le même engagement&nbsp;!</span><br/><br/>
-
-                        C'est pourquoi je joins aujourd'hui la voix à celle de WELFARM pour vous demanderr de ne pas acheter d'eCG auprès des fermes
-                        d'Amerique du Sud. Avec WELFARM, je dis non aux fermes à sang&nbsp;!<br/><br/>
                         <br/>
 
-                        <a href="mailto:cyrille.faucher@hipra.com,contact@ceva.com"><img
+                        <a href="mailto:cyrille.faucher@hipra.com"><img
                           src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/j-envoie-un-mail-a-HIPRA-et-CEVA.png"
                           alt="J’envoie un mail à HIPRA et CEVA"></a>
                 </div>
