Updated 'fermesasang/index.html' via CloudCannon

--- a/fermesasang/index.html
+++ b/fermesasang/index.html
@@ -47,7 +47,8 @@
         Il est donc inadmissible que des laboratoires puissent commercialiser, sur notre territoire, des médicaments produits dans ces
         conditions.<br/><br/>
 
-        Les laboratoires MSD ont déjà renoncé à se fournir auprès de ces fermes.<br/><br/>
+       Face à ce scandale, les laboratoires MSD, IDT et CEVA ont renoncé à se fournir dans les fermes à sang d'Amerique du Sud. <b>Il est grand temps qu'HIPRA prenne le même engagement !</b>
+       <br/><br/>
 
         C’est pourquoi je joins aujourd’hui ma voix à celle de WELFARM pour vous demander de de ne pas acheter d'eCG auprès des fermes d'Amérique du Sud.</b> <br/><br/>
 
