Updated 'fermesasang/index.html' via CloudCannon

--- a/fermesasang/index.html
+++ b/fermesasang/index.html
@@ -329,11 +329,12 @@
                         l’éthique. Les prélèvements de sang massifs et répétés mettent à mal la santé des juments.<br/><br/>
 
                         De telles pratiques ne seraient pas tolérées en France. Il est donc inadmissible que des laboratoires puissent commercialiser,
-                        sur notre territoire, des médicaments produits dans ces conditions.
-                        Les laboratoires MSD ont déjà renoncé à se fournir auprès de ces fermes.<br/><br/>
+                        sur notre territoire, des médicaments produits dans ces conditions.<br/><br/>
+                        
+                        Face à ce scandale, les laboratoires MSD, IDT et CEVA ont renoncé à se fournir dans les fermes à sang d'Amerique du Sud. 
+                        <b>Il est grand temps qu'HIPRA prenne le même engagement !</b>
 
-                        C’est pourquoi je joins aujourd’hui ma voJe publie un message sur mon compteix à celle de WELFARM pour vous demander de
-                        prendre un engagement : celui de ne pas acheter d’eCG auprès des fermes à sang d’Argentine et d’Uruguay.
+                        C’est pourquoi je joins aujourd’hui ma voie à celle de WELFARM pour vous demander de ne pas acheter d’eCG auprès des fermes à sang d’Argentine et d’Uruguay.
                         Avec WELFARM, je dis non aux fermes à sang ! <br/><br/>
 
                         Face à ce scandale, les laboratoires MSD, IDT et CEVA ont renoncé à se fournir dans les fermes à sang d'Amerique du Sud.<span
