Updated 'fermesasang/index.html' via CloudCannon

--- a/fermesasang/index.html
+++ b/fermesasang/index.html
@@ -331,10 +331,10 @@
                         De telles pratiques ne seraient pas tolérées en France. Il est donc inadmissible que des laboratoires puissent commercialiser,
                         sur notre territoire, des médicaments produits dans ces conditions.<br/><br/>
                         
-                        Face à ce scandale, les laboratoires MSD, IDT et CEVA ont renoncé à se fournir dans les fermes à sang d'Amerique du Sud. 
-                        <b>Il est grand temps qu'HIPRA prenne le même engagement !</b>
+                        Face à ce scandale, les laboratoires MSD, IDT et CEVA ont renoncé à se fournir dans les fermes à sang d'Amerique du Sud.<br/><br/>
+                        <b>Il est grand temps qu'HIPRA prenne le même engagement !</b><br/><br/>
 
-                        C’est pourquoi je joins aujourd’hui ma voie à celle de WELFARM pour vous demander de ne pas acheter d’eCG auprès des fermes à sang d’Argentine et d’Uruguay.
+                        C’est pourquoi je joins aujourd’hui ma voix à celle de WELFARM pour vous demander de ne pas acheter d’eCG auprès des fermes à sang d’Argentine et d’Uruguay.
                         Avec WELFARM, je dis non aux fermes à sang ! <br/><br/>
 
                         Face à ce scandale, les laboratoires MSD, IDT et CEVA ont renoncé à se fournir dans les fermes à sang d'Amerique du Sud.<span
