Updated 'nos-combats/index.html' via CloudCannon

--- a/nos-combats/index.html
+++ b/nos-combats/index.html
@@ -438,10 +438,10 @@
                 PARTAGEZ /
                 <span class="greenColor">AGISSEZ
                 </span>
-                <a target="_blank" href="https://www.facebook.com/share.php?u=TODO">
+                <a target="_blank" href="https://www.facebook.com/share.php?u=https://action.welfarm.fr/nos-combats">
                     <img class="inline MS10-large s80-40" src="assets/imgs/fb.png" alt="Facebook">
                 </a>
-                <a target="_blank" href="https://twitter.com/share?url=TODO">
+                <a target="_blank" href="https://twitter.com/share?url=https://action.welfarm.fr/nos-combats">
                     <img class="inline s80-40" src="assets/imgs/tt.png" alt="Twitter">
                 </a>
             </p>
