Updated 'nos-combats/index.html' via CloudCannon

--- a/nos-combats/index.html
+++ b/nos-combats/index.html
@@ -4,7 +4,23 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <!-- Primary Meta Tags -->
+    <title>PARCE QUE LE BIEN-ÊTRE ANIMAL EST UN DROIT...</title>
+    <meta name="title" content="PARCE QUE LE BIEN-ÊTRE ANIMAL EST UN DROIT...">
+    <meta name="description" content="Plus d’1 milliard d’animaux sont élevés et abattus chaque année en France. Aidez-nous à améliorer leur vie">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://action.welfarm.fr/nos-combats">
+    <meta property="og:title" content="PARCE QUE LE BIEN-ÊTRE ANIMAL EST UN DROIT...">
+    <meta property="og:description" content="Plus d’1 milliard d’animaux sont élevés et abattus chaque année en France. Aidez-nous à améliorer leur vie">
+    <meta property="og:image" content="https://s3.amazonaws.com/heroku-adfinitas-campaign/WELFARM/Recette_FA18/meta_image.png">
+    
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://action.welfarm.fr/nos-combats">
+    <meta property="twitter:title" content="PARCE QUE LE BIEN-ÊTRE ANIMAL EST UN DROIT...">
+    <meta property="twitter:description" content="Plus d’1 milliard d’animaux sont élevés et abattus chaque année en France. Aidez-nous à améliorer leur vie">
+    <meta property="twitter:image" content="https://s3.amazonaws.com/heroku-adfinitas-campaign/WELFARM/Recette_FA18/meta_image.png">
     <link rel="stylesheet" target="_blank" href="assets/css/foundation.css">
     <link rel="stylesheet" target="_blank" href="assets/css/app.css">
     <link rel="stylesheet" target="_blank" href="assets/css/utils.css">
