Updated 'nos-combats/index.html' via CloudCannon

--- a/nos-combats/index.html
+++ b/nos-combats/index.html
@@ -167,7 +167,7 @@
                             <h5 class="kalam text-center whiteColor fs30">Maryse</h5>
                             <p class="yanone text-center whiteColor fs17">Elle vient d’un élevage intensif de poules pondeuses en cage où elle ne
                                 connaissait que les quelques dizaines de cm² de sa cage grillagée.
-                                Maryse est arrivée dans un triste état dans notre ferme refuge La Hardonnerie&nbsp;: bec coupé, griffes trop longues,
+                                Maryse est arrivée dans un triste état dans notre ferme refuge La Hardonnerie&nbsp;: bec épointé, griffes trop longues,
                                 crête tombante, corps déplumé.
                             </p>
                         </div>
@@ -199,10 +199,7 @@
                         <div class="greenImgBG">
                             <h5 class="kalam text-center whiteColor fs30">Everest</h5>
                             <p class="yanone text-center whiteColor fs17 fw100">
-                                Elevés pour leur chair et promis à l’abattoir, ils étaient comme près de 99&nbsp;% des lapins en France élevés en cage&nbsp;:
-                                sol grillagé,
-                                espace équivalent à une feuille A4 pour chaque individu&nbsp;: impossible de se dresser, de faire des bonds, de
-                                ronger, ou encore de se cacher.
+                                Elevés pour leur chair et promis à l’abattoir, ils étaient détenus en cage comme près de 99&nbsp;% des lapins en France&nbsp;: sol grillagé et à peine l’équivalent d’ une feuille A4 par animal. Il leur est impossible de se dresser, de faire des bonds, de ronger, ou encore de se cacher.
                             </p>
                         </div>
                     </div>
@@ -214,9 +211,9 @@
                         <div class="greenImgBG">
                             <h5 class="kalam text-center whiteColor fs30">Tomi</h5>
                             <p class="yanone text-center whiteColor fs17">
-                                Saisis sur des sites d’abattage illégaux ces moutons allaient être égorgés à vif, ils vivaient enfermés depuis des
+                                Saisis sur des sites d’abattage illégaux, Tomi et ses congénères allaient être égorgés à vif, ils vivaient enfermés depuis des
                                 semaines dans
-                                un garage sans lumière, et avaient passé toute la nuit ligotés comme en témoignaient les cicatrices visibles sur leurs
+                                un garage sans lumière, et avaient passé toute une nuit ligotés comme en témoignaient les cicatrices visibles sur leurs
                                 pattes.
                             </p>
                         </div>
