--- a/liberezlapoule/index.html
+++ b/liberezlapoule/index.html
@@ -78,7 +78,7 @@
                     Emmanuel<br />Macron s’est<br />engagé à<br /><span class="yellow">interdire, d’ici<br />2022, la vente<br />d’œufs de poules<br />en cage.</span>
                 </h1>
                 <h1 class="show-for-small-only">libérez<br />la poule !</h1>
-                <p class="share">N’hésitez pas à partager sur vos réseaux<br />sociaux <a href="https://twitter.com/share?url=https://action.welfarm.fr/poules-pondeuses/" target="_blank">#liberezlapoule</a></p>
+                <p class="share">N’hésitez pas à partager sur vos réseaux<br />sociaux <a href="https://twitter.com/share?url=https://action.welfarm.fr/liberezlapoule/" target="_blank">#liberezlapoule</a></p>
 
 
             </div>
@@ -130,12 +130,12 @@
         </div>
         <div id="merci" class="row expanded text-center">
             <div class="small-12 large-offset-1 large-11 columns bt-merci">
-                <a href="https://www.facebook.com/share.php?u=https://action.welfarm.fr/poules-pondeuses/" target="_blank">
+                <a href="https://www.facebook.com/share.php?u=https://action.welfarm.fr/liberezlapoule/" target="_blank">
                     <img class="absolute" src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Poules-pondeuses/corner-grey.png" alt="">
                     Je partage sur
                     <img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Poules-pondeuses/fb-small.png" alt="Logo Facebook">
                 </a>
-                <a href="https://twitter.com/share?url=https://action.welfarm.fr/poules-pondeuses/" target="_blank">
+                <a href="https://twitter.com/share?url=https://action.welfarm.fr/liberezlapoule/" target="_blank">
                     <img class="absolute" src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Poules-pondeuses/corner-grey.png" alt="">
                     Je partage sur
                     <img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Poules-pondeuses/tw-small.png" alt="Logo Twitter">
