--- a/liberezlapoule/index.html
+++ b/liberezlapoule/index.html
@@ -187,7 +187,7 @@
                     <img class="absolute" src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Poules-pondeuses/EN-FRANCE.png" alt="En France">
                     <div class="row first">
                         <div class="inline">
-                            <img alt="Poussin derrière une montagne d'oeufs" src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Poules-pondeuses/poussin-oeufs.png">
+                            <img alt="Poussin avec une montagne d'oeufs" src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Poules-pondeuses/poussin-oeufs.png">
                         </div>
                         <div class="inline text">
                             <p class="big">49</p>
