--- a/liberezlapoule/index.html
+++ b/liberezlapoule/index.html
@@ -288,7 +288,7 @@
 <script src="assets/js/remodal.js" type="text/javascript"></script>
 <script src="assets/js/intlTelInput.min.js" type="text/javascript"></script>
 
-<script src="http://bernii.github.io/gauge.js/dist/gauge.min.js" type="text/javascript"></script>
+<script src="https://bernii.github.io/gauge.js/dist/gauge.min.js" type="text/javascript"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.3/foundation.min.js" type="text/javascript"></script>
 <script src="https://www.gstatic.com/firebasejs/5.9.0/firebase.js"></script>
 <script>
