--- a/liberezlapoule/index.html
+++ b/liberezlapoule/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content=""/>
     <title>J’ai libéré la poule…</title>
 
-    <meta property="og:title" content="J’ai libéré la poule…"/>
+    <meta property="og:title" content="J’ai demandé au Président de libérer la poule"/>
     <meta property="og:type" content="website"/>
     <meta property="og:description" content="Aujourd’hui en France, plus de 60 % des poules sont encore détenues en cage. Comme moi interpellez Emmanuel Macron : #liberezlapoule"/>
     <meta property="og:url" content="https://action.welfarm.fr/liberezlapoule/"/>
@@ -45,13 +45,13 @@
             <p>Monsieur le Président,<br /><br />
 
                 Lors de votre campagne présidentielle, vous vous êtes engagé à interdire, d’ici 2022, la vente d’œufs de poules élevées en batterie.<br />
-                Aujourd’hui en France, plus de 60% des œufs sont pondus par des poules enfermées en cages. Pourtant, 90% des français* se disent favorables à la suppression de ce type d’élevage au profit de l’élevage plein air.<br /><br />
+                Aujourd’hui en France, plus de 60% des œufs sont pondus par des poules enfermées en cage. Pourtant, 90% des français* se disent favorables à la suppression de ce type d’élevage au profit de l’élevage plein air.<br /><br />
 
-                Malheureusement, avec le rejet de l’interdiction de l’élevage de poules en cages, la loi Agriculture et Alimentation adoptée en 2018 n’a pas saisi l’opportunité de mettre fin à ce mode de production, pourtant condamné par les associations de protection animale et vivement critiqué par le grand public.<br /><br />
+                Malheureusement, avec le rejet de l’interdiction de l’élevage de poules en cage, la loi Agriculture et Alimentation adoptée en 2018 n’a pas saisi l’opportunité de mettre fin à ce mode de production, pourtant condamné par les associations de protection animale et vivement critiqué par le grand public.<br /><br />
 
                 Par ailleurs, pour être satisfaisante, cette interdiction ne doit pas se limiter aux œufs coquille, mais doit également prendre en compte les ovoproduits (plats préparés, gâteaux, pâtes, sauces, desserts…) qui contiennent près de 40% des œufs consommés par les ménages français. Or 90% des œufs utilisés dans ces produits proviennent d’élevages en cage.<br /><br />
 
-                C’est la raison pour laquelle je me joins à WELFARM afin de vous rappeler votre engagement et vous demander de faire inscrire dans la loi l’interdiction totale d'élever des poules en cages pour produire des œufs quelle que soit leur destination.<br /><br /></p>
+                C’est la raison pour laquelle je me joins à WELFARM afin de vous rappeler votre engagement et vous demander de faire inscrire dans la loi l’interdiction totale d'élever des poules en cage pour produire des œufs quelle que soit leur destination.<br /><br /></p>
 
             <p class="small">*Sondage Yougov/L214 – février 2018</p>
         </div>
@@ -73,7 +73,7 @@
             Signer la pétition
         </button>
         <div class="row">
-            <div class="small-10 small-centered medium-uncentered medium-6 large-offset-1 large-4 columns text">
+            <div class="small-10 small-centered medium-uncentered medium-5 large-offset-1 large-4 columns text">
                 <h1 class="show-for-medium">Lors de sa<br />campagne<br />présidentielle,<br />
                     Emmanuel<br />Macron s’est<br />engagé à<br /><span class="yellow">interdire, d’ici<br />2022, la vente<br />d’œufs de poules<br />en cage.</span>
                 </h1>
@@ -135,7 +135,9 @@
                     Je partage sur
                     <img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Poules-pondeuses/fb-small.png" alt="Logo Facebook">
                 </a>
-                <a href="https://twitter.com/share?url=https://action.welfarm.fr/liberezlapoule/" target="_blank">
+                <a href="http://twitter.com/share?text=Aujourd%E2%80%99hui%20en%20France%2C%20plus%20de%2060%20%25%20des%20poules%20sont%20encore%20d%C3%A9tenues%20en%20cage.%20Comme%20moi%20interpellez%20Emmanuel%20Macron%20%3A&url=https://action.welfarm.fr/liberezlapoule/&hashtags=liberezlapoule" target="_blank">
+
+
                     <img class="absolute" src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Poules-pondeuses/corner-grey.png" alt="">
                     Je partage sur
                     <img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Poules-pondeuses/tw-small.png" alt="Logo Twitter">
@@ -161,7 +163,7 @@
                     <p class="small text-center"><span class="bold">Emmanuel Macron</span>, 9 février 2017</p>
                 </div>
                 <div class="row text text-center">
-                    <p class="bold">Malheureusement, la loi Agriculture et Alimentation en 2018
+                    <p class="bold">Malheureusement, la loi Agriculture et Alimentation adoptée en 2018
                         n’a pas tenu cette promesse : l’interdiction de l’élevage en cage des poules pondeuses a été rejetée ! *</p>
                     <p>Aujourd’hui en France, plus de 60 % des poules sont encore détenues en cage. Pourtant, 90% des français** se disent favorables à la suppression de ce type d’élevage au profit de l’élevage plein air.</p>
                 </div>
