--- a/hc44Fs9SPqqfFW8b/index.html
+++ b/hc44Fs9SPqqfFW8b/index.html
@@ -16,10 +16,10 @@
     <link rel="icon" type="image/png" href="siteicon.png"/>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.3/foundation.min.css"/>
-    <link rel='stylesheet' href='assets/css/app.css' type='text/css'/>
-    <link rel='stylesheet' href='assets/css/intlTelInput.css' type='text/css'/>
-    <link rel='stylesheet' href='assets/css/remodal-default-theme.css' type='text/css'/>
-    <link rel='stylesheet' href='assets/css/remodal.css' type='text/css'/>
+    <link rel='stylesheet' href='./assets/css/app.css' type='text/css'/>
+    <link rel='stylesheet' href='./assets/css/intlTelInput.css' type='text/css'/>
+    <link rel='stylesheet' href='./assets/css/remodal-default-theme.css' type='text/css'/>
+    <link rel='stylesheet' href='./assets/css/remodal.css' type='text/css'/>
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700" rel="stylesheet">
