--- a/hc44Fs9SPqqfFW8b/index.html
+++ b/hc44Fs9SPqqfFW8b/index.html
@@ -19,7 +19,7 @@
     <link rel='stylesheet' href='./assets/css/app.css' type='text/css'/>
     <link rel='stylesheet' href='./assets/css/intlTelInput.css' type='text/css'/>
     <link rel='stylesheet' href='./assets/css/remodal-default-theme.css' type='text/css'/>
-    <link rel='stylesheet' href='./assets/css/remodal.css' type='text/css'/>
+    <link rel='stylesheet' href='./aassets/css/remodal.css' type='text/css'/>
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700" rel="stylesheet">
@@ -468,10 +468,10 @@
 </section>
 
 <script src="https://code.jquery.com/jquery.min.js" type="text/javascript"></script>
-<script src="assets/js/intlTelInput.min.js" type="text/javascript"></script>
+<script src="./assets/js/intlTelInput.min.js" type="text/javascript"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.3/foundation.min.js" type="text/javascript"></script>
-<script src="assets/js/app.js" type="text/javascript"></script>
-<script src="assets/js/remodal.js" type="text/javascript"></script>
+<script src="./assets/js/app.js" type="text/javascript"></script>
+<script src="./assets/js/remodal.js" type="text/javascript"></script>
 </body>
 </html>
