return data schame

--- a/hc44Fs9SPqqfFW8b/index.html
+++ b/hc44Fs9SPqqfFW8b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content=""/>
-    <title>Cochons</title>
+    <title>Welfarm - Stopcastration</title>
 
-    <meta property="og:title" content=""/>
+    <meta property="og:title" content="Welfarm - Stopcastration"/>
     <meta property="og:type" content="website"/>
     <meta property="og:description" content=""/>
     <meta property="og:url" content=""/>
@@ -19,7 +19,7 @@
     <link rel='stylesheet' href='./assets/css/app.css' type='text/css'/>
     <link rel='stylesheet' href='./assets/css/intlTelInput.css' type='text/css'/>
     <link rel='stylesheet' href='./assets/css/remodal-default-theme.css' type='text/css'/>
-    <link rel='stylesheet' href='./aassets/css/remodal.css' type='text/css'/>
+    <link rel='stylesheet' href='./assets/css/remodal.css' type='text/css'/>
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700" rel="stylesheet">
@@ -42,10 +42,25 @@
 
 <div class="remodal" data-remodal-id="video">
     <button data-remodal-action="close" class="remodal-close"></button>
-
     <div class="video-container">
-        <iframe id="video" src="https://www.youtube.com/embed/C5GzagA5X44" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe id="video" src="https://www.youtube.com/embed/y7BzRfLGLiw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
+</div>
+
+
+<div class="petition">
+    <a href="" id="closePetition">X</a>
+    <div class="relative">
+
+        <p class="title">DEMANDONS L’INTERDICTION<br />DE LA CASTRATION A VIF DES PORCELETS</p>
+
+        <p>Alors que la Suisse, la Norvège, la Suède et l’Allemagne ont interdit la castration des porcelets sans anesthésie, le gouvernement français fait toujours la sourde oreille.<br /><br />
+
+            Le 25 mai 2016, WELFARM s’est rendue au Ministère de l’Agriculture pour remettre 110 294 pétitions. Depuis, E. Macron a été élu, plusieurs Ministres de l’agriculture se sont succédés mais la situation reste la même pour des millions de cochons malgré les promesses à répétition !<br /><br />
+
+            C’est pourquoi il est essentiel de rester mobilisés : continuez à signer et à partager massivement la pétition afin de demander l’interdiction ferme et définitive de la castration à vif des porcelets ! </p>
+    </div>
+
 </div>
 
 
@@ -73,7 +88,7 @@
                                     Voir la vidéo
                                     <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/hover-bt-header.png" alt="">
                                 </a>
-                                <a href="">
+                                <a href="" id="openPetition">
                                     Lire la pétition
                                     <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/hover-bt-header.png" alt="">
                                 </a>
@@ -193,11 +208,11 @@
 
                         <div class="row text">
                             <div class="small-12 large-8 columns left">
-                                <p>En 2010, la Commission européenne a été à l'initiative d'une <a href="" target="_blank">déclaration</a> visant à cesser de recourir à la castration d'ici 2018. Des mesures concrètes ont été prises chez nos voisins pour réduire voire interdire la castration à vif des porcelets.</p>
+                                <p>En 2010, la Commission européenne a été à l'initiative d'une <a href="https://ec.europa.eu/food/animals/welfare/practice/farm/pigs/castration_alternatives_en" target="_blank">déclaration</a> visant à cesser de recourir à la castration d'ici 2018. Des mesures concrètes ont été prises chez nos voisins pour réduire voire interdire la castration à vif des porcelets.</p>
                             </div>
                             <div class="small-12 large-4 columns right">
                                 <p>En France ON NOUS <br />
-                                    FAIT DES <span class="underline">PROMESSES</span></p>
+                                    FAIT DES <a target="_blank" href="https://agriculture.gouv.fr/2016-2020-une-strategie-globale-pour-le-bien-etre-des-animaux-en-france" class="underline">PROMESSES</a></p>
 
                                 <p class="big">MAIS<br />
                                     RIEN NE<br />
@@ -259,7 +274,8 @@
                             <a href="TODO" target="_blank">MME. DEGOIS</a> /
                             <a href="TODO" target="_blank">M. DIARD</a> /
                             <a href="TODO" target="_blank">M. RAMOS</a> /
-                            <a href="TODO" target="_blank">M. BOURNAZEL</a>
+                            <a href="TODO" target="_blank">M. BOURNAZEL</a> /
+                            <a href="https://twitter.com/EstherBenbassa/status/1143147687186968576xx" target="_blank">MME BENBASSA</a>
                         </p>
                     </section>
 
@@ -275,7 +291,7 @@
                             <a class="border" href="https://action.welfarm.fr/inscription" target="_blank">JE M’INSCRIS À LA NEWSLETTER
                                 <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/arrow-right-green.png" alt="">
                             </a>
-                            <a href="https://www.cooperl.com/fr/valoriser-le-savoir-faire" target="_blank">JE LIS LE DOSSIER DE PRESSE
+                            <a href="https://welfarm.fr/presse" target="_blank">JE LIS LE DOSSIER DE PRESSE
                                 <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/arrow-right-green.png" alt="">
                             </a>
                         </div>
